# ManuProC_Base

./: .cproject  .cvsignore  .gitignore  .mt-attrs  .project  ChangeLog  Makefile.am  NEWS  README  README.md  acconfig.h  autogen.sh  config_static.h  config_winQt.h  configure.ac  configure.in  install_from_SCRATCH_hints
MSVC_Net2008/: ManuProCConfig.h  ManuProC_Base.def  ManuProC_Base.sln  ManuProC_Base.vcproj  copy_back.bat  create_includes.bat  libManuProC_Base.rc
docs/: Query.txt
examples/: .cvsignore  .gitignore  FetchIStream.pgcc  Makefile.am  Query.cc  Query2.cc  Query_test.cc  Zeitpunkt.cc  algorithm.cc  datetest.cc  extra_cols.cc  fixedpoint.cc  interval.cc  intmap.cc  long.cc  md5test.cc  mvc.cc  mvc2.cc  rexml.cc  tag_speed.cc  tagstream.cc  tagstream.out  template1  test.db  testHandles.cc  testKW.cc  test_pgsql_conv.cc  trace.cc  vectormap.cc
po/: .gitignore  ChangeLog  HOWTO  LINGUAS  Makevars  POTFILES.in  copy  cs.po  da.po  de.po  es.po  fr.po  it.po  ja.po  pl.po  ru.po  zh.po
sql_functions/: Makefile  atoi.c  create.sql  ean_check.c  ean_check_int.c  kw2date.c  numerictest.cc
src/: .cvsignore  .gitignore  Ausgabe_neu.cc  Ausgabe_neu.h  CacheStatic.h  Cache_Pointer.h  Date.h  Datum.cc  Datum.h  Datum_i18n.cc  DllObject.h  DllObject_caller.cc  DllObject_dll.cc  EmptyInt_4TeX.h  EntryValueBase.cc  EntryValueBase.h  EntryValueBool.h  EntryValueDatum.cc  EntryValueDatum.h  EntryValueDouble.cc  EntryValueDouble.h  EntryValueEmptyInt.h  EntryValueFixed.h  EntryValueFixedEinheit.h  EntryValueIntGermanString.cc  EntryValueIntGermanString.h  EntryValueIntString.cc  EntryValueIntString.h  EntryValueInvert.h  EntryValueSort.cc  EntryValueSort.h  EntryValueTimeStamp.cc  EntryValueTimeStamp.h  EntryValue_easy.cc  EntryValue_easy.h  Event.cc  Event.h  ExtraColumns.cc  ExtraColumns.h  FILEstream.h  (+116 more)
src/SignalProperty/: MpcProperty.hh  MpcSignal.hh
src/SignalProperty/testp/: .gitignore  Makefile  propchain.cc  testprop.cc
src/md5/: .gitignore  global.h  md5.c  md5.h
utests/: .gitignore  Makefile  mpc_base_sqlite.cc  mpc_base_sqlite.hh  mpc_base_sqlite_unittest.cc  test.db
utils/: Makefile  po2sed.cc  transpose.cc
